change copy, add contact section, fix FR locale

--- a/src/app/content/home/home-page/home-page.component.html
+++ b/src/app/content/home/home-page/home-page.component.html
@@ -87,7 +87,7 @@
 <div class="panel">
   <p appIntl="home-why-bloated-apps">
     This application was developed because in some countries, the official application
-    are either bloated with other features, asking far too many permissions to run, or even
+    is either bloated with other features, asking far too many permissions to run, or even
     not available outside Android and iOS.
   </p>
   <p appIntl="home-why-increased-usage">
@@ -103,19 +103,19 @@
 <div class="panel">
   <h2>
     <span class="ti ti-brand-open-source"></span>
-    <span appIntl="home-authors-title">Open source</span>
+    <span appIntl="home-foss-title">Open source</span>
   </h2>
-  <p appIntl="home-help-opensource">
+  <p appIntl="home-foss-desc">
     Because health information is sacred and private, this application has its <strong>source code available</strong>
     for anyone to see and audit. As a simple web application without any server component, it can
     be self-hosted for maximum privacy.
   </p>
-  <p appIntl="home-help-github">
-    The source code is licensed under the <strong>MIT license</strong>, is accessible on this
+  <p appIntl="home-foss-github">
+    The source code is licensed under the <strong>MIT license</strong>, and is accessible on this
     <a href="https://github.com/bchanudet/covid-certificate-pwa">Github repository</a>. The Readme file
     will guide you if you want to download or compile the application yourself.
   </p>
-  <p appIntl="home-help-appreciated">
+  <p appIntl="home-foss-contribution">
     If you encounter a bug, feel free to file <a href="https://github.com/bchanudet/covid-certificate-pwa/issues/new/choose">a new issue.</a>
     All contributions are welcome, and most especially translations to other languages.
   </p>
@@ -139,7 +139,7 @@
   </dl>
   <dl>
     <dt appIntl="home-authors-translations-title">Other translations</dt>
-    <dd>
+    <dd appIntl="home-authors-translations-none">
       None yet. <a href="https://github.com/bchanudet/covid-certificate-pwa/wiki/Localization-Guide">Help translating in your language</a>.
     </dd>
   </dl>
@@ -157,4 +157,12 @@
     "authorized" application it may lift some eyebrows. Also please note that depending on the country
     and the place, you might need to provide also a proof of identity alongside the QR Code.
   </p>
+</div>
+<div class="panel">
+  <h2>
+    <span class="ti ti-mailbox"></span>
+    <span appIntl="home-contact-title">Contact</span>
+  </h2>
+  <p appIntl="home-contact-email">
+    Should you have any specific enquiry, you can send an email to <a href="mailto:covid-app@benjaminchanudet.com" style="white-space: nowrap;">covid-app@benjaminchanudet.com</a>.</p>
 </div>
