--- a/src/app/content/list/list-page/list-page.component.html
+++ b/src/app/content/list/list-page/list-page.component.html
@@ -1,7 +1,7 @@
 <div class="panel">
   <h1 appIntl="list-title">Your certificates</h1>
   <div *ngIf="(certificates$ | async) as certs; else nocerts">
-    <app-cert-line *ngFor="let c of certs" [cert]='c'></app-cert-line>
+    <app-cert-line *ngFor="let c of certs" [cert]='c' [default]='isDefault(c.id)'></app-cert-line>
   </div>
   <ng-template #nocerts>
     <p class="instructions" appIntl="list-instructions">
